--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 django==4.0
 gunicorn==20.1
 uvicorn==0.17.6
-graphql-relay==3.1.0
-graphql-core==3.1.2
-graphene==3.0
+graphql-relay==2
+graphql-core==2.2
+graphene==2.1.7
+graphene-django==2.8.2
+django-cors-headers==3.2
