--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ graphql-core==2.2
 graphene==2.1.7
 graphene-django==2.8.2
 django-cors-headers==3.2
+python-dotenv==0.20.0
+dj-database-url==0.5.0
+whitenoise==6.1.0
